2014-07-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c:
	  - hex_to_text() is optimized.
	  - define_macro() deletes specified entry if *data is '\0'.

2014-07-21  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, xlib/x_imagelib.c: ~/.mlterm/macro_*.six is cached.

	* ml_vt100_parser.[ch]:
	  - DECDMAC/DECINVM are supported.
	  - If DECDMAC defines sixel graphics data, store it in ~/.mlterm/macro_*.six and
	    show it by DECINVM.

2014-07-19  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c:
	  - "use_auto_detect" and "auto_detect_encodings" are supported.
	  - replaceTextBuffering(0,0,null,null) is called in checkTextLimit().

	* x_screen.c, doc/en/PROTOCOL: "auto_detect_encodings" is added to OSC 5380 and 5381.

	* ml_vt100_parser.[ch]:
	  - ml_get_auto_detect_encodings() is added.
	  - ISO8859_6_R (arabic) and ISO8859_8_R (hebrew) are always converted to
	    unicode because they need bidi rendering.

	* mc_io.[ch]: 'const' is added.

	* mc_auto_detect.[ch]: Added.

	* mc_check.[ch]: Removed.

	* ml_pty.c: Parenthesis is added.

2014-07-15  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: ml_line_is_empty() in start_selection() and selecting_with_motion()
	  is removed.

	* ml_screen.c: convert_col_to_char_index() is fixed.

2014-07-14  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The null pointer bug of_display.color_cache in the case
	  of vinfo.depth >= 2 && _disp.depth == 1 is fixed.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Compiling error is fixed.

	* ml_screen.c, x_screen.c:
	  ml_term_get_cols(screen->term) - line->num_of_chars
	  => ml_term_get_cols(screen->term) - ml_line_get_num_of_filled_cols(line)

	* x_selection.c: conved flag is added in update_sel_region() instead of
	  col != conved_col because it doesn't works if col == 0.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.[ch], ml_term.h, x_screen.c, x_selection.[ch]:
	  Rectangle selection is supported.
