@@ -1,3 +1,7 @@
+2014-07-23  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_drcs.[ch], ml_vt100_parser.[ch]: const is added to some arguments.
+
 2014-07-21  Araki Ken  <arakiken@users.sf.net>
 
 	* ml_vt100_parser.c:
